[package]
name = "prim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
glam = { version = "0.21", features = ["bytemuck"] }
cfg-if = "1"
winit = "0.27"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.13"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}