[package]
name = "prim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libprim"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "prim"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
glam = { version = "0.21", features = ["bytemuck"] }
cfg-if = "1"
winit = "0.27"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.13"
instant = "0.1"
hashers = "1.0"
itertools = "0.10"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}